style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
}

body{
    width: 100%;
    height: auto;
    overflow-x: hidden;
}

header{
    z-index: 889;
    position: fixed;
    background-color: rgba(255,255,255,0.1);
    top: 0;
    left: 0;
    width: 100%;
    padding: 15px 200px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    transition: 0.2s ease;
}

header.sticky{
    background-color: #3a6cf4;
    padding: 10px 200px;
}

header .brand{
    color: white;
    font-size: 32px;
    font-weight: 700;
    text-transform: uppercase;
    text-decoration: none;
}

header .navigation{
    position: relative;
}

header .navigation a{
    color: white;
    font-size: 3em;
    text-decoration: none;
    font-weight: 500;
    margin-left: 30px;
}

header .navigation a:hover{
    color: #3a6cf4;
    transition: 0.4 ease-in-out;
}

header.sticky .navigation a:hover{
    color: black;
}

section{
    padding: 100px 200px;
}

.main{
    position: relative;
    width: 100%;
    min-height: 100vh;
    display: flex;
    align-items: center;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: scroll;
    overflow: hidden;
}

.hero-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.hero-image{
    width: 40%;
    position: relative;
}

.hero-image img{
    width: 100%;
    max-width: 450px;
    position: relative;
    z-index: 2;
}


.main .content{
    max-width: 800px;
}

.main .content h2{
    color: white;
    font-size: 4em;
    font-weight: 500;
}

.main .content h2 span{
    font-size: 5rem;
    font-weight: 600;
}

.animated-text{
    position: relative;
    height: 70px;
    overflow: hidden;
}

.animated-text h3{
    color: #4e9eff;
    font-size: 4em;
    font-weight: 700;
    line-height: 70px;
    letter-spacing: 1px;
}

.animated-text h3:nth-child(1){
    animation: text-move 6s infinite ease-out;
}

@keyframes text-move {
    0%,15%{
        margin-top: 0px;
    }
    
    25%,40%{
        margin-top: -70px;
    }
    
    50%,65%{
        margin-top: -140px;
    }
    
    75%,90%{
        margin-top: -70px;
    }
    
    100%{
        margin-top: 0px;
    }
}

.btn{
    color: white;
    background-color: #3a6cf4;
    font-size: 3em;
    font-weight: 600;
    display: inline-block;
    padding: 10px 20px;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 1px;
    border-radius: 2px;
    margin-top: 30px;
    border-radius: 25px;
    transition: 0.5s ease-in-out;
}

.btn:hover{
    background-color: #04143f;
}

.media-icons{
    margin-top: 50px;
}

.media-icons a{
    color: white;
    font-size: 40px;
    margin-right: 30px;
}

.media-icons a:hover{
    color: #3a6cf4;
}




/* About */

.about{
    position: relative;
    background: white;
    min-height: 100vh;
    width: 100%;
    z-index: 5;
}

.title{
    width: 100%;
    font-size: 1.5em;
    font-weight: 700;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.section-title{
    position: relative;
    color: #3a6cf4;
    font-size: 1em;
    font-weight: 800;
    margin-bottom: 60px;
}


.section-title{
    position: relative;
    color: #3a6cf4;
    font-size: 2.7em;
    font-weight: 800;
    margin-bottom: 60px;
    display: inline-block;
}

.section-title::after{
    content: "";
    display: block;
    width: 80px;
    height: 4px;
    background: #3a6cf4;
    margin: 10px auto 0;
    border-radius: 2px;
}


.about .content{
    position: relative;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
}

.paragraph-text{
    font-size: 2em;
}

.about .content .col-left{
    position: relative;
    width: 45%;
}

.about .content .col-right{
    position: relative;
    width: 50%;
}

.about .content .col-left .img-card{
    position: relative;
    width: 100%;
    min-height: 700px;
}

.about .content .col-left .img-card img{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.about .content .col-right .content-title{
    font-size: 2em;
    font-weight: 800;
    margin-bottom: 20px;
}

.about .content .col-right .paragraph-text {
    font-size: 1.3em;
    line-height: 1.7;
}


/* Skills Section */

.skills{
    background-color: black;
    min-height: 100vh;
    width: 100%;
}

.skills .content{
    position: relative;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: white;
    margin-top: 20px;
}

.skills .content .col-left{
    position: relative;
    width: 46%;
}

.skills .content .col-left .content-title{
    margin-bottom: 20px;
    font-size: 2.5em;
    font-weight: 700;
}

.skills .content .col-right{
    position: relative;
    width: 46%;
}

.skills .content .col-right .bar{
    margin-bottom: 15px;
    padding: 10px;
}

.skills .content .col-right .bar .info{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 5px;
}

.skills .content .col-right .br .info span{
    font-size: 18px;
    font-weight: 500;
}

.skills .content .col-right .bar .line{
    position: relative;
    width: 100%;
    height: 15px;
    background-color: #ccc;
    border-radius: 2px;
}

.skills .content .col-right .bar .line::before{
    content: "";
    position: absolute;
    height: 100%;
    top: 0;
    left: 0;
    border-radius: 3px;
}

.skills .content .col-right .bar .html::before{
    width: 95%;
    background-color: #e45126;
}
/* ... */

